[gd_scene load_steps=3 format=3 uid="uid://duglxr6sv6jsu"]

[ext_resource type="Script" uid="uid://bok40251nvurm" path="res://scripts/lr_node_example.gd" id="1_qx2mv"]
[ext_resource type="Script" uid="uid://cvrd34gbuluwc" path="res://scripts/PlotArea.gd" id="2_75i00"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_qx2mv")

[node name="LRNode" type="LRNode" parent="."]

[node name="PlotArea" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 35.0
offset_top = 16.0
offset_right = 1122.0
offset_bottom = 451.0
script = ExtResource("2_75i00")

[node name="Line2D" type="Line2D" parent="PlotArea"]

[node name="DataPoints" type="Node2D" parent="PlotArea"]

[node name="UI" type="CanvasLayer" parent="."]

[node name="Button" type="Button" parent="UI"]
offset_left = 821.0
offset_top = 473.0
offset_right = 1088.0
offset_bottom = 617.0
text = "Train LR Model"

[node name="PredictionLabel" type="Label" parent="UI"]
offset_left = 163.0
offset_top = 505.0
offset_right = 740.0
offset_bottom = 562.0

[node name="HSlider" type="HSlider" parent="UI"]
offset_left = 95.0
offset_top = 588.0
offset_right = 502.0
offset_bottom = 622.0

[connection signal="pressed" from="UI/Button" to="." method="_on_button_pressed"]
[connection signal="value_changed" from="UI/HSlider" to="." method="_on_slider_changed"]
